force-app/main/default/objects/Quote_Details__c/Quote_Details__c.object-meta.xml
<CustomObject>
    <label>Quote Details</label>
    <nameField>
        <displayFormat>SPOT-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>