force-app/main/default/objects/Quote_Details__c/fields/Linked__c.field-meta.xml
<CustomField>
    <fullName>Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linked</label>
    <type>Checkbox</type>
</CustomField>