force-app/main/default/objects/Quote_Details__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <label>MCN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>