force-app/main/default/objects/Quote_Details__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <label>Quote Name</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>